FIxed some spacing issues with visuals

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -161,7 +161,6 @@ body {
     flex-grow: 1;
     position: relative;
     margin: auto auto;
-    min-height: 100vh;
     padding: 0px;
     display: flex;
     border: var(--border-size) solid black;
@@ -175,7 +174,6 @@ input {
 }
 
 #Heading {
-    flex: 1;
     border: var(--border-size) solid black;
     display: flex;
     flex-direction: column;
